overlays/uksouth-staging/olympus/atlas/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: audit.${cluster_name}.${cluster_location}.bink.sh
  namespace: default
spec:
  rules:
    - host: audit.${cluster_name}.${cluster_location}.bink.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: atlas-api
                port:
                  number: 80
  tls:
    - hosts:
        - audit.${cluster_name}.${cluster_location}.bink.sh
